--- a/src/main/resources/templates/book_list.html
+++ b/src/main/resources/templates/book_list.html
@@ -13,6 +13,7 @@
 		    <th>Author</th>
 		    <th>Year</th>
 		    <th>ISBN</th>
+		    <th>Category</th>
 		   
 		</tr>  
     	<tr th:each = "book : ${books}">
@@ -20,6 +21,7 @@
 			<td th:text="${book.author}"></td>
 			<td th:text="${book.year}"></td>
 			<td th:text="${book.isbn}"></td>
+			<td th:text="${book.category.name}"></td> 	
 			
  			<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>    		
     	</tr>
